# CodeHS

./: README.md  Restaurant Bill Calculator.py  [ PROJECT 1 ] Restaurant Bill Calculator.py  [ PROJECT 2 ] Paint Calculator.py  [ TKINTER  ] test.py  [ TKINTER ] test.py  app.py  index.html  main.py  pyproject.toml  test.py
