[tool.poetry]
name = "repl-nix-codehs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_codehs"}]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
